<?xml version="1.0"?>
<package>
  <name>topological_recovery</name>
  <version>1.0.0</version>
  <description>The topological_recovery package</description>

  <maintainer email="mark@markrosoft.org">Mark Collins</maintainer>

  <license>Strands</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_filter</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>action_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_filter</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>
